# Advance-Projects-List

./: README.md
CodeBoss/: .gitignore  CLAUDE.md  (+1 more)
CodeBoss/backend/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
CodeBoss/backend/src/agents/: aggregator.py  code_quality_agent.py  context_fetcher.py  db_query.py  graph.py  performance_agent.py  prompts.py  security_agent.py  state.py
CodeBoss/backend/src/db/: embedding_raw_context.py  index.py  vector_indexer.py
CodeBoss/backend/src/git_ops/: repo_manager.py
CodeBoss/backend/src/graph/: multi_agent_reviewer.py
CodeBoss/backend/src/services/: simple_context_builder.py  vector_retriever.py
CodeBoss/backend/src/utils/: ai_client.py  config.py  github_bot.py  qdrant_client.py
CodeBoss/backend/src/webhook/: github_webhook.py
Memora/backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
Memora/backend/agents/: __init__.py  memory_agent.py
Memora/backend/api/: main.py
Memora/backend/api/controllers/: auth.py  conversations.py
Memora/backend/api/routes/: auth.py  conversations.py  memory.py
Memora/backend/config/: settings.py
Memora/backend/db/models/: user.py
Memora/backend/exports/: parser.py  qdrant_client.py  sql_init.py  types.py
Memora/backend/llm/: orchestrator.py  prompts.py  providers.py
Memora/backend/memory/: episodic_mem.py  memory_manager.py  procedural_mem.py
Memora/backend/storage/: memory_store.py  vector_store.py
Memora/backend/tools/: __init__.py  memory_tools.py
Memora/backend/update/: dedup.py  updater.py
Memora/backend/utils/: embeddings.py  extractor.py
N8N/python-backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  start.sh
N8N/python-backend/Workers/: index.py
N8N/python-backend/Workers/nodes/: agent.py  email.py  form.py  telegram.py
N8N/python-backend/Workers/nodes/agents/: llm.py
N8N/python-backend/Workers/nodes/agents/tools/: web_search.py  web_summary.py
N8N/python-backend/Workers/nodes/runNode/: runner.py
N8N/python-backend/db/: alembic.ini  database.py
N8N/python-backend/db/migrations/: env.py  script.py.mako
N8N/python-backend/db/migrations/versions/: 27b95e8dad49_execution_status.py  94943e2fd798_update.py  a4c98f636def_execution_paused_id_for_node_added.py  aaef2e30a7f6_execution_change.py  add_created_at_to_execution.py  fbdb705a205e_initial_schema.py
N8N/python-backend/db/models/: models.py  schemas.py
N8N/python-backend/exports/: redis.py
N8N/python-backend/server/: main.py
N8N/python-backend/server/controller/: user.py  webhook.py
N8N/python-backend/server/redis/: index.py
N8N/python-backend/server/routes/: credentials.py  executions.py  nodes.py  postmark_webhook.py  resume_workflow.py  user.py  webhook.py  workflow.py
Vision2React/backend/: .dockerignore  .gitignore  Dockerfile  Procfile  e2b.Dockerfile  e2b.toml  imports.py  main.py  pyproject.toml  start.sh  test.py  test_enqueue.py
Vision2React/backend/config/: settings.py
Vision2React/backend/exports/prisma/: client.py
Vision2React/backend/exports/redis/: queue.py  redis.py
Vision2React/backend/prisma/: schema.prisma
Vision2React/backend/routes/: auth.py  controller.py
Vision2React/backend/worker/: imports.py  main.py
Vision2React/backend/worker/ai/: utils.py
Vision2React/backend/worker/ai/graph/: nodes.py  state.py  workflow.py
Vision2React/backend/worker/ai/services/: e2b_validator.py  llm_client.py  prompts.py
Vision2React/backend/worker/figma/controllers/: figma_handler.py
Vision2React/backend/worker/figma/services/: export_detector.py  export_handler.py  figma_client.py
(+242 files in other folders)
