[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "langchain>=1.2.0",
    "langchain-core>=1.2.4",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.6",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "qdrant-client>=1.16.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
